<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
<!--    <parent>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
<!--        <version>3.3.5</version>-->
<!--        <relativePath/>  lookup parent from repository -->
<!--    </parent>-->
	<parent>
	    <groupId>com.mikedev.mutxamelcf</groupId>
	    <artifactId>mutxamelcfWeb</artifactId>
	    <version>1.0</version>
	    <relativePath>../pom.xml</relativePath>
	</parent>
    <artifactId>mvc</artifactId>
    <name>mvc</name>
    <description>Página web del Mutxamel Club de Fútbol</description>
    <properties>
            <spring.version>6.1.14</spring.version>
    </properties>
    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>5.3.7</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery</artifactId>
            <version>3.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mikedev.mutxamelcf</groupId>
            <artifactId>service</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.thymeleaf.extras</groupId>
		    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>
    </dependencies>

    <build>
        <plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <version>3.11.0</version>
	            <configuration>
	                <source>17</source>
	                <target>17</target>
	                <compilerArgs>
	                    <arg>-parameters</arg>
	                </compilerArgs>
	            </configuration>
	        </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
                <executions>
		       		<execution>
			        	<goals>
			        		<goal>repackage</goal>
			          	</goals>
			        </execution>
			 	</executions>
			 	<configuration>
        			<mainClass>com.mikedev.mutxamelcf.mvc.Application</mainClass>
    			</configuration>
            </plugin>
        </plugins>
    </build>
</project>

